Template y tiempo en cronograma

--- a/archivos/template/poster_latex/poster.tex
+++ b/archivos/template/poster_latex/poster.tex
@@ -69,8 +69,7 @@
 
 \vspace{1cm}
 
-\includegraphics[width=0.2\linewidth]{figuras/NODOSdE.png} \\
-\fontsize{55}{55}\selectfont El logo de tu institución \\[0.3cm]
+\includegraphics[width=0.4\linewidth]{figuras/BP.png} \\
 
 
 
